[Fix] Fix the hover effect on selected answer after disable was applied on IE

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -260,6 +260,16 @@ body {
     color:#000;
 }
 
+.option:hover.correct {
+    background: #EBFFDD;
+    border: 1px solid #1C9800;
+}
+
+.option:hover.wrong {
+    background: #FEE6E8;
+    border: 1px solid #DD2C2F;
+}
+
 .not-allowed {
     cursor: not-allowed;
     opacity: 0.7;
